--- a/index.html
+++ b/index.html
@@ -1,236 +1,355 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title>My First Bitstarter</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link type="text/css" rel="stylesheet"
-				href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
-	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
-	<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
-	<script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
-	<script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
-	<link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
-	<link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" rel="stylesheet" type="text/css">
-	<style type="text/css">
-		/* Large desktop */
-		@media (min-width: 980px) {
-			body {
-				padding-top: 60px;
-			}
-			.linediv-l {
-				border-right: 1px white solid;
-			}
-			.linediv-r {
-				border-left: 1px white solid;
-			}
-		}
+  <meta charset="utf-8">
+  <title>My First Bitstarter</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link type="text/css" rel="stylesheet"
+        href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
+  <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
+  <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
+  <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
+  <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
 
-		@media (max-width: 480px) {
-			.copy {
-				padding: 2.5% 10%;
-			}
-			.linediv-l {
-				border-bottom: 1px white solid;
-			}
-			.linediv-r {
-				border-top: 1px white solid;
-			}
-		}
+  <!-- jquery plugin for carousel -->
+  <script type="text/javascript" src="/jquery-infinite-carousel/jquery.infinite-carousel.js"> </script>
 
+  <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
+  <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" rel="stylesheet" type="text/css">
+  <style type="text/css">
+    /* Large desktop */
+    @media (min-width: 980px) {
+      body {
+        padding-top: 60px;
+      }
+      .linediv-l {
+        border-right: 1px white solid;
+      }
+      .linediv-r {
+        border-left: 1px white solid;
+      }
+    }
 
-		/* All form factors */
-		
-		/* Main body and headings */
-		body {
-			font-family: 'Open Sans', Helvetica, Arial, sans-serif;
-		}
-		.heading, .subheading {
-			font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
-			text-align: center;
-		}
-		p.lead {
-			padding-top: 1.5%;
-			font-size: 24px;
-			line-height: 30px;
-		}
-		p {
-			font-size: 18px;
-			line-height: 24px;
-		}
-
-		/* pitch and action*/
-		.pitch {
-			padding: 2.5% 0%;
-		}
-		.order {
-			padding: 2% 0%;
-		}
-		.actions {
-			background-color: #343434;
-			padding: 3% 0%;
-		}
-		.video, .thermometer, .order, .social, .statistics {
-			text-align: center;
-		}
-		.statistics h3, .statistics p {
-			color: white;
-		}
+    @media (max-width: 480px) {
+      .copy {
+        padding: 2.5% 10%;
+      }
+      .linediv-l {
+        border-bottom: 1px white solid;
+      }
+      .linediv-r {
+        border-top: 1px white solid;
+      }
+    }
 
 
-		/* marketing copy */
-		.copy {
-			padding-top: 2.5%;
-			padding-bottom: 2.5%;
-			text-align: justify;
-		}
-		.asset {
-			padding: 2.5% 0%;
-		}
-		.footer {
-			color: #cccccc;
-			text-align: center;
-		}
-		.footer p {
-			font-size: 11px;
-		}
-		.footer a {
-			color: #ccccff;
-		}
-	</style>
+    /* All form factors */
+    
+
+
+    /* Main body and headings */
+    body {
+      font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+
+
+      background-image: linear-gradient(bottom, rgb(224,224,224) 52%, rgb(196,196,196) 70%);
+      background-image: -o-linear-gradient(bottom, rgb(224,224,224) 52%, rgb(196,196,196) 70%);
+      background-image: -moz-linear-gradient(bottom, rgb(224,224,224) 52%, rgb(196,196,196) 70%);
+      background-image: -webkit-linear-gradient(bottom, rgb(224,224,224) 52%, rgb(196,196,196) 70%);
+      background-image: -ms-linear-gradient(bottom, rgb(224,224,224) 52%, rgb(196,196,196) 70%);
+
+      background-image: -webkit-gradient(
+        linear,
+        left bottom,
+        left top,
+        color-stop(0.52, rgb(224,224,224)),
+        color-stop(0.7, rgb(196,196,196))
+      );
+    }
+
+    .main-container {
+      background-color: white;
+      margin: 0 auto;
+      width: 80%;
+    }
+
+    /* navbar */
+    .navbar-wrapper {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      z-index: 10;
+      margin-top: 20px;
+      margin-bottom: -90px; /* Negative margin to pull up carousel. 90px is roughly margins and height of navbar. */
+    }
+
+    .navbar {
+      background-color: black;
+    }
+
+    .container {
+      margin: 0 auto;
+    }
+
+    .heading, .subheading {
+      font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
+      text-align: center;
+    }
+    p.lead {
+      padding-top: 1.5%;
+      font-size: 24px;
+      line-height: 30px;
+    }
+    p {
+      font-size: 18px;
+      line-height: 24px;
+    }
+
+    /* pitch and action*/
+    .pitch {
+      padding: 2.5% 0%;
+    }
+    .order {
+      padding: 2% 0%;
+    }
+    .actions {
+      background-color: #343434;
+      padding: 3% 0%;
+    }
+    .video, .thermometer, .order, .social, .statistics {
+      text-align: center;
+    }
+    .statistics h3, .statistics p {
+      color: white;
+    }
+
+
+    /* marketing copy */
+    .copy {
+      padding-top: 2.5%;
+      padding-bottom: 2.5%;
+      text-align: justify;
+    }
+    .asset {
+      padding: 2.5% 0%;
+    }
+    .footer {
+      color: #cccccc;
+      text-align: center;
+    }
+    .footer p {
+      font-size: 11px;
+    }
+    .footer a {
+      color: #ccccff;
+    }
+
+
+    /* carousel */
+    #viewport{
+      width: 100%;  /*Defines the size of the visible part of the carousel
+        Attention : if you only want to see plain items in the viewport,
+        the width of the viewport should take into account of :
+        - the items width
+        - the right and left padding of items
+        - the number of items you want to see in the viewport
+       */
+      overflow:hidden; /* Hides extra elements, those outside the viewport area */
+      /* Fix for IE */
+      position:relative;
+    }
+    #viewport ul{
+      position: relative; /* Enables positionning of elements inside viewport */
+      padding: 0; /* Resets default - User Agent - style */
+      margin: 0;
+    }
+    #viewport ul li{
+      width: 100%;
+      height: 300px;
+      float: left; /* Places list items side by side*/
+      list-style: none; /* Resets default - User Agent - style */
+      display: inline;
+    }
+
+    #viewport ul li img{
+      width: 100%;
+      height: 100%;
+    }
+    /* Cosmetic */
+    #simplePrevious, #simpleNext{
+      cursor: pointer;
+      font-size: 0.8em;
+      text-decoration: underline;  
+    }
+  </style>
+
+
+  <script type="text/javascript">
+    $(document).ready(function(){
+        $('#viewport').carousel('#simplePrevious', '#simpleNext');
+    });
+  </script>
 </head>
 <body>
-	<!-- navbar -->
-	<div class="navbar navbar-inverse navbar-fixed-top">
-		<div class="navbar-inline">
-			<div class="container">
-				<button type="button" class="btn btn-navbar"
-								data-toggle="collapse" data-target=".nav-collapse" >
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>	
-				<a class="brand" href="#">Bitstarter</a>
-				<div>
-					<ul class="nav">
-						<li class="active"><a href="#">Home</a></li>
-						<li><a href="#about">About</a></li>
-						<li><a href="#contact">Contact</a></li>
-					</ul>
-				</div><!-- nav collapse -->
-			</div>
-		</div>
-	</div>
 
-	<!-- product -->
-	<div class="container">
-		<div class="row-fluid heading">
-			<div class="span12">
-				<h1>Product</h1>
-			</div>
-		</div>
-		<div class="row-fluid subheading">
-			<div class="span12">
-				<p class="lead">One sentence description</p>
-			</div>
-		</div>
+    <!-- navbar wrapper -->
+    <div class="navbar-wrapper">
+      <!-- navbar -->
+      <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="navbar-inline">
+          <div class="container">
+            <button type="button" class="btn btn-navbar"
+                    data-toggle="collapse" data-target=".nav-collapse" >
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>  
+            <a class="brand" href="#">Bitstarter</a>
+            <div>
+              <ul class="nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+              </ul>
+            </div><!-- nav collapse -->
+          </div>
+        </div>
+      </div>
+
+    </div> <!-- end nabvar wrapper -->
 
 
-		<div class="row-fluid pitch">
 
-			<div class="span5 offset1 video">
-				<img class="img-polaroid" src="http://placehold.it/480x300">	
-			</div>
-			<div class="span5 actions">
-				<div class="span8 offset2">
-					<div class="statistics">
-						<div class="span4">
-							<div class="linediv-l">
-								<h3>1000</h3> <p>backers</p>
-							</div>
-						</div>
-						<div class="span4">
-							<div class="linediv-c">
-								<h3>$6000</h3> <p>$10,000</p>
-							</div>
-						</div>
-						<div class="span4">
-							<div class="linediv-r">
-								<h3>10</h3> <p>days left</p>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="span10 offset1">
-					<div class="thermometer progress active">
-						<div class="bar bar-success" style="width:60%"></div>
-						<div class="bar bar-warning" style="width:40%"></div>
-					</div>
-				</div>
-				<div class="span6 offset3 order">
-					<button class="btn btn-success btn-large">Preorder</button>	
-				</div>
-				<div class="span8 offset2 social">
-					<button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>	
-					<button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>	
-				</div>
-			</div>
-		</div>
+  <!-- main container -->
+  <div class='main-container'>
+
+    <!-- carousel -->
+    <div class="carousel" >
+    
+      <div id="viewport">
+        <ul>
+          <li><a href="http://imgur.com/YKTq5x9"><img src="http://i.imgur.com/YKTq5x9.jpg" title="Hosted by imgur.com"/></a></li>
+          <li><a href="http://imgur.com/dAT6tZA"><img src="http://i.imgur.com/dAT6tZA.jpg" title="Hosted by imgur.com"/></a></li>
+          <li><a href="http://imgur.com/yup64DJ"><img src="http://i.imgur.com/yup64DJ.jpg" title="Hosted by imgur.com"/></a></li>
+        </ul>
+      </div>
+      <a id="simplePrevious">Previous</a>
+      <a id="simpleNext">Next</a>
+
+    </div> <!-- end carousel -->
+    <!-- product -->
+    <div class="container">
+      <div class="row-fluid heading">
+        <div class="span12">
+          <h1>Learning Buddy</h1>
+        </div>
+      </div>
+      <div class="row-fluid subheading">
+        <div class="span12">
+          <p class="lead">Double your learning speed</p>
+        </div>
+      </div>
 
 
-		<!-- marketing copy -->
-		<div class="row-fluid section1">
-			<div class="span5 offset1 asset">
-				<img class="img-polaroid" src="http://placehold.it/480x300">		
-			</div>
-			<div class="span5 copy">
-				<p>some marketing text</p>
-			</div>
-		</div>
+      <div class="row-fluid pitch">
+
+        <div class="span5 offset1 video">
+          <!-- <img class="img-polaroid" src="http://placehold.it/480x300">   -->
+          <img class="img-polaroid" src="http://i.imgur.com/sBdUlTS.png">
+        </div>
+        <div class="span5 actions">
+          <div class="span8 offset2">
+            <div class="statistics">
+              <div class="span4">
+                <div class="linediv-l">
+                  <h3>500</h3> <p>backers</p>
+                </div>
+              </div>
+              <div class="span4">
+                <div class="linediv-c">
+                  <h3>$400</h3> <p>$2,000</p>
+                </div>
+              </div>
+              <div class="span4">
+                <div class="linediv-r">
+                  <h3>10</h3> <p>days left</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="span10 offset1">
+            <div class="thermometer progress active">
+              <div class="bar bar-success" style="width:60%"></div>
+              <div class="bar bar-warning" style="width:40%"></div>
+            </div>
+          </div>
+          <div class="span6 offset3 order">
+            <button class="btn btn-success btn-large">Preorder</button>  
+          </div>
+          <div class="span8 offset2 social">
+            <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>  
+            <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>  
+          </div>
+        </div>
+      </div>
 
 
-		<div class="row-fluid section2">
-			<div class="span5 offset1 copy copy-right">
-				<p>some copy-right text</p>
-			</div>
-			<div class="span5 asset">
-				<img class="img-polaroid" src="http://placehold.it/480x300">		
-			</div>
-		</div>
+      <!-- marketing copy -->
+      <div class="row-fluid section1">
+        <div class="span5 offset1 asset">
+          <img class="img-polaroid" src="http://placehold.it/480x300">    
+        </div>
+        <div class="span5 copy">
+          <p>From wikipedia: Collaborative learning is a situation in which two or more people learn or attempt to learn something together.[1] Unlike individual learning, people engaged in collaborative learning capitalize on one another’s resources and skills (asking one another for information, evaluating one another’s ideas, monitoring one another’s work, etc.).[2][3] More specifically, collaborative learning is based on the model that knowledge can be created within a population where members actively interact by sharing experiences and take on asymmetry roles.[4] Put differently, collaborative learning refers to methodologies and environments in which learners engage in a common task where each individual depends on and is accountable to each other. These include both face-to-face conversations[5] and computer discussions (online forums, chat rooms, etc.).[6] Methods for examining collaborative learning processes include conversation analysis and statistical discourse analysis.[7]
+          </p>
+        </div>
+      </div>
 
-		<div class="row-fluid faq">
-			<div class="span10 offset1">
-				<h3>FAQ</h3>
-				<div class="accordion" id="accordion2">
-					<div class="accordion-group">
-						<div class="accordion-heading">
-							<a class="accordion-toggle" data-toggle="collapse" 
-								data-parent="#accordion2" href="#collapseOne">
-								What does FAQ stand for?</a>	
-						</div>
-						<div id="collapseOne" class="accordion-body collapse">
-							<div class="accordion-inner">Frequently Asked Question.</div>
-						</div>
-					</div>
-					<div class="accordion-group">
-						<div class="accordion-heading">
-							<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">What's a Frequent Asked Question?</a>	
-						</div>
-						<div id="collapseTwo" class="accordion-body collapse">
-							<div class="accordion-inner">A question which is commonly asked by users.
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
 
-		<div class="row-fluid footer">
-			<div class="span12">
-				<p>This work is licensed by XXX</p>
-			</div>
-		</div>
+      <div class="row-fluid section2">
+        <div class="span5 offset1 copy copy-right">
+          <p>Our tool and website are designed to enchance the learning experience by facilitaing group study, which helps learners to benefit from the knowledge from each of the partners.</p>
+        </div>
+        <div class="span5 asset">
+          <img class="img-polaroid" src="http://placehold.it/480x300">    
+        </div>
+      </div>
 
-	</div>
+      <div class="row-fluid faq">
+        <div class="span10 offset1">
+          <h3>FAQ</h3>
+          <div class="accordion" id="accordion2">
+            <div class="accordion-group">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" data-toggle="collapse" 
+                  data-parent="#accordion2" href="#collapseOne">
+                  What is learning buddy?</a>  
+              </div>
+              <div id="collapseOne" class="accordion-body collapse">
+                <div class="accordion-inner">It is a learning tool for group study</div>
+              </div>
+            </div>
+            <div class="accordion-group">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">Who would benefit from using this?</a>  
+              </div>
+              <div id="collapseTwo" class="accordion-body collapse">
+                <div class="accordion-inner">People with similar interest or learning goal
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row-fluid footer">
+        <div class="span12">
+          <p>This work is licensed by XXX</p>
+        </div>
+      </div>
+    <div>
+
+  </div> <!--end main-container -->
 </body>
 </html>
