update carousel WIP

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 
     .container {
       margin: 0 auto;
+      width: 100%;
     }
 
     .heading, .subheading {
@@ -177,10 +178,23 @@
       height: 100%;
     }
     /* Cosmetic */
-    #simplePrevious, #simpleNext{
+    #simplePrevious {
+      position: absolute;
       cursor: pointer;
       font-size: 0.8em;
       text-decoration: underline;  
+      font-size: 80px;
+      left:10px;
+      top: 40%;
+    }
+    #simpleNext {
+      position: absolute;
+      cursor: pointer;
+      font-size: 0.8em;
+      text-decoration: underline;  
+      font-size: 80px;
+      right:10px;
+      top: 40%;
     }
   </style>
 
@@ -234,8 +248,8 @@
           <li><a href="http://imgur.com/yup64DJ"><img src="http://i.imgur.com/yup64DJ.jpg" title="Hosted by imgur.com"/></a></li>
         </ul>
       </div>
-      <a id="simplePrevious">Previous</a>
-      <a id="simpleNext">Next</a>
+      <a id="simplePrevious"><</a>
+      <a id="simpleNext">></a>
 
     </div> <!-- end carousel -->
     <!-- product -->
@@ -298,7 +312,7 @@
       <!-- marketing copy -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">    
+          <img class="img-polaroid" src="http://i.imgur.com/UQxugEA.png">    
         </div>
         <div class="span5 copy">
           <p>From wikipedia: Collaborative learning is a situation in which two or more people learn or attempt to learn something together.[1] Unlike individual learning, people engaged in collaborative learning capitalize on one another’s resources and skills (asking one another for information, evaluating one another’s ideas, monitoring one another’s work, etc.).[2][3] More specifically, collaborative learning is based on the model that knowledge can be created within a population where members actively interact by sharing experiences and take on asymmetry roles.[4] Put differently, collaborative learning refers to methodologies and environments in which learners engage in a common task where each individual depends on and is accountable to each other. These include both face-to-face conversations[5] and computer discussions (online forums, chat rooms, etc.).[6] Methods for examining collaborative learning processes include conversation analysis and statistical discourse analysis.[7]
@@ -309,10 +323,10 @@
 
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
-          <p>Our tool and website are designed to enchance the learning experience by facilitaing group study, which helps learners to benefit from the knowledge from each of the partners.</p>
+          <p>With the friends, you can reach domain and learn information that without aid you can hardly do. With learning buddy, it is made much easier to collaborate with your friends and help each other on the subject</p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">    
+          <img class="img-polaroid" src="http://i.imgur.com/UQxugEA.png">    
         </div>
       </div>
 
