update on index

--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
       color: white;
     }
 
+    .p-heading {
+      margin: 0 0;
+    }
 
     /* marketing copy */
     .copy {
@@ -268,9 +271,11 @@
 
       <div class="row-fluid pitch">
 
-        <div class="span5 offset1 video">
-          <!-- <img class="img-polaroid" src="http://placehold.it/480x300">   -->
-          <img class="img-polaroid" src="http://i.imgur.com/sBdUlTS.png">
+        <div class="span5 offset1">
+          <!-- <img class="img-polaroid" src="http://placehold.it/480x300">   
+          <img class="img-polaroid" src="http://i.imgur.com/wv3h9mV.jpg" alt="goals"> -->
+          <h2>What is learning buddy?</h2>
+          <p>It is a place you can find a friend to work with you on a goal. You help, learn and motivate each other on achiving a series of goals that you both want to achieve. We will provide a place where you can find a learning buddy, and share your goal and progress with them. In addition, by employing the <a href="http://www.pomodorotechnique.com/">promodoro</a> technique, you can better focus you and your learning buddy to the goal. </p>
         </div>
         <div class="span5 actions">
           <div class="span8 offset2">
@@ -312,21 +317,24 @@
       <!-- marketing copy -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://i.imgur.com/UQxugEA.png">    
+             
+        <a href="http://imgur.com/UQxugEA.png"><img class="img-polaroid" src="http://i.imgur.com/UQxugEA.png" alt="learning circle"> </a>
         </div>
         <div class="span5 copy">
-          <p>From wikipedia: Collaborative learning is a situation in which two or more people learn or attempt to learn something together.[1] Unlike individual learning, people engaged in collaborative learning capitalize on one another’s resources and skills (asking one another for information, evaluating one another’s ideas, monitoring one another’s work, etc.).[2][3] More specifically, collaborative learning is based on the model that knowledge can be created within a population where members actively interact by sharing experiences and take on asymmetry roles.[4] Put differently, collaborative learning refers to methodologies and environments in which learners engage in a common task where each individual depends on and is accountable to each other. These include both face-to-face conversations[5] and computer discussions (online forums, chat rooms, etc.).[6] Methods for examining collaborative learning processes include conversation analysis and statistical discourse analysis.[7]
-          </p>
+          <h3 class="p-heading">Collaborative Learning</h3>
+          <p>From wikipedia: Collaborative learning is a situation in which two or more people learn or attempt to learn something together. Unlike individual learning, people engaged in collaborative learning capitalize on one another’s resources and skills. More specifically, collaborative learning is based on the model that knowledge can be created within a population where members actively interact by sharing experiences and take on asymmetry roles.</p>
+          <p>With the friends, you can reach domain and learn information that without aid you can hardly do. With learning buddy, it is made much easier to collaborate with your friends and help each other on the subject</p>
         </div>
       </div>
 
 
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
-          <p>With the friends, you can reach domain and learn information that without aid you can hardly do. With learning buddy, it is made much easier to collaborate with your friends and help each other on the subject</p>
+          <h3 class="p-heading">Time, Group and Share</h3>
+          <p>We recommend a "time group and share" approach, which would better hugely increase the learning speed. To be more specific, we provide the pomodoro technique to time your task. With this technique, you typicaly want to focus at least 25 mins and try not to be distracted. Then with our online learning buddy tools, you find your learning buddy and set up goals together. At the end, you share the tasks with your partner and share the experience and lessions with each other.</p>          
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://i.imgur.com/UQxugEA.png">    
+          <iframe  width="100%" height="300px" src="//www.youtube.com/embed/cH-z5kmVhzU" frameborder="0" allowfullscreen></iframe> 
         </div>
       </div>
 
@@ -359,7 +367,7 @@
 
       <div class="row-fluid footer">
         <div class="span12">
-          <p>This work is licensed by XXX</p>
+          <p>This work is designed and owned by xinxin</p>
         </div>
       </div>
     <div>
