update img tag to contain alt attribute

--- a/index.html
+++ b/index.html
@@ -246,9 +246,9 @@
     
       <div id="viewport">
         <ul>
-          <li><a href="http://imgur.com/YKTq5x9"><img src="http://i.imgur.com/YKTq5x9.jpg" title="Hosted by imgur.com"/></a></li>
-          <li><a href="http://imgur.com/dAT6tZA"><img src="http://i.imgur.com/dAT6tZA.jpg" title="Hosted by imgur.com"/></a></li>
-          <li><a href="http://imgur.com/yup64DJ"><img src="http://i.imgur.com/yup64DJ.jpg" title="Hosted by imgur.com"/></a></li>
+          <li><a href="http://imgur.com/YKTq5x9"><img src="http://i.imgur.com/YKTq5x9.jpg" title="Hosted by imgur.com" alt="carousel_1"/></a></li>
+          <li><a href="http://imgur.com/dAT6tZA"><img src="http://i.imgur.com/dAT6tZA.jpg" title="Hosted by imgur.com" alt="carousel_2"/></a></li>
+          <li><a href="http://imgur.com/yup64DJ"><img src="http://i.imgur.com/yup64DJ.jpg" title="Hosted by imgur.com" alt="carousel_3"/></a></li>
         </ul>
       </div>
       <a id="simplePrevious"><</a>
