--- a/index.html
+++ b/index.html
@@ -180,12 +180,10 @@
       width: 100%;
       height: 100%;
     }
-    /* Cosmetic */
     #simplePrevious {
       position: absolute;
       cursor: pointer;
       font-size: 0.8em;
-      text-decoration: underline;  
       font-size: 80px;
       left:10px;
       top: 40%;
@@ -194,18 +192,43 @@
       position: absolute;
       cursor: pointer;
       font-size: 0.8em;
-      text-decoration: underline;  
       font-size: 80px;
       right:10px;
       top: 40%;
     }
+
+    /* end carousel style*/
+
+
+    /* social buttons */
+   div.addthis_toolbox {
+     width:180px;
+     margin: 0 auto;
+   }
   </style>
 
 
+  <!-- carousel control -->
   <script type="text/javascript">
     $(document).ready(function(){
         $('#viewport').carousel('#simplePrevious', '#simpleNext');
     });
+  </script>
+
+
+  <!-- traditional ga tracking -->
+  <script type="text/javascript">
+
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-25724987-3']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+
   </script>
 </head>
 <body>
@@ -307,8 +330,18 @@
             <button class="btn btn-success btn-large">Preorder</button>  
           </div>
           <div class="span8 offset2 social">
-            <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>  
-            <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>  
+            <!-- AddThis Button BEGIN -->
+            <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+              <a class="addthis_button_preferred_1"></a>
+              <a class="addthis_button_preferred_2"></a>
+              <a class="addthis_button_compact"></a>
+              <a class="addthis_counter addthis_bubble_style"></a>
+            </div>
+             <script type="text/javascript">var addthis_config = 
+              {"data_track_addressbar":true};</script>
+             <script type="text/javascript" 
+                     src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-51e5f5d9549fdf9b"></script>
+            <!-- AddThis Button END -->
           </div>
         </div>
       </div>
@@ -373,5 +406,17 @@
     <div>
 
   </div> <!--end main-container -->
+
+<!-- google analytics universal tracking -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-25724987-3', 'herokuapp.com');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
