--- a/index.html
+++ b/index.html
@@ -205,6 +205,10 @@
      width:180px;
      margin: 0 auto;
    }
+
+    div.coinbase-button {
+      margin: 0 auto;
+    }
   </style>
 
 
@@ -327,7 +331,14 @@
             </div>
           </div>
           <div class="span6 offset3 order">
-            <button class="btn btn-success btn-large">Preorder</button>  
+            <a class="coinbase-button" 
+              data-button-style="custom_large"
+              data-button-text="Preorder with Bitcoin"
+              data-code="a090083122b0fef7ecf92f8a22e7d8ba" 
+              href="https://coinbase.com/checkouts/a090083122b0fef7ecf92f8a22e7d8ba">
+              Preorder with Bitcoin
+            </a>
+            <script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
           </div>
           <div class="span8 offset2 social">
             <!-- AddThis Button BEGIN -->
