update donate with bit coin button text

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
           <div class="span6 offset3 order">
             <a class="coinbase-button" 
               data-button-style="custom_large"
-              data-button-text="Preorder with Bitcoin"
+              data-button-text="Donate with Bitcoin"
               data-code="a090083122b0fef7ecf92f8a22e7d8ba" 
               href="https://coinbase.com/checkouts/a090083122b0fef7ecf92f8a22e7d8ba">
               Preorder with Bitcoin
